feat: Implement MAL search route
